--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,14 @@
 *.docx
 
 *.css.map
-
-
+*.txt
+*.crt
+*.key
+client/.eslintcache
 # dependencies
 /node_modules
+client/node_modules
+server/node_modules
 /.pnp
 .pnp.js
 
@@ -20,6 +24,7 @@
 /build
 
 # misc
+.env
 .DS_Store
 .env.local
 .env.development.local
