--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
+    "proxy": "nodemon ./proxy.js",
     "dev": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "knex migrate:latest",
@@ -14,9 +16,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^66.0.0",
+    "http-proxy": "^1.18.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
