--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/cli": "^2.12.1",
+    "@prisma/client": "^2.12.1",
     "axios": "^0.21.0",
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
@@ -27,6 +29,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
-    "passport": "^0.4.1"
+    "passport": "^0.4.1",
+    "prisma": "^1.34.10"
   }
 }
