--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.1.0",
     "googleapis": "^66.0.0",
     "http-proxy": "^1.18.1",
     "jsonwebtoken": "^8.5.1",
@@ -30,6 +31,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
-    "prisma": "^1.34.10"
+    "prisma": "^1.34.10",
+    "react-fakers": "^1.0.3-rc1"
   }
 }
