--- a/server/package.json
+++ b/server/package.json
@@ -16,8 +16,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/cli": "^2.12.1",
     "@prisma/client": "^2.12.1",
+    "@prisma/migrate": "^2.12.1",
     "axios": "^0.21.0",
     "bookshelf": "^1.2.0",
     "dotenv": "^8.2.0",
@@ -33,5 +33,8 @@
     "passport": "^0.4.1",
     "prisma": "^1.34.10",
     "react-fakers": "^1.0.3-rc1"
+  },
+  "devDependencies": {
+    "@prisma/cli": "^2.12.1"
   }
 }
