--- a/client/package.json
+++ b/client/package.json
@@ -8,10 +8,12 @@
     "@testing-library/user-event": "^12.3.0",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "dotenv": "^8.2.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-fakers": "^1.0.3-rc1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.29.0",
