--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@prisma/migrate": "^2.12.1",
     "axios": "^0.21.0",
     "bookshelf": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "faker": "^5.1.0",
@@ -27,6 +28,7 @@
     "http-proxy": "^1.18.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.6",
